# parallel-processing-group

./: CMakeLists.txt  README.md  main-multithread.cpp  main-serial.cpp  parallel-sorting.cpp  sequential-sorting.cpp
